// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User profile component renders default avatar if signed in 1`] = `
<div>
  <div>
    <WithStyles(IconButton)
      className="UserProfileComponent-button-1"
      onClick={[Function]}
    >
      <pure(AccountCircleIcon) />
    </WithStyles(IconButton)>
    <WithStyles(Menu)
      anchorEl={null}
      id="simple-menu"
      onClose={[Function]}
      open={false}
    >
      <div
        className="UserProfileComponent-usernameContainer-2"
      >
        <WithStyles(Typography)>
          Signed in as:
        </WithStyles(Typography)>
        <WithStyles(Typography)
          className="UserProfileComponent-username-3"
        >
          anonymous
        </WithStyles(Typography)>
      </div>
      <WithStyles(Divider) />
      <WithStyles(MenuItem)
        onClick={[Function]}
      >
        <WithStyles(ListItemIcon)>
          <pure(ExitToAppIcon) />
        </WithStyles(ListItemIcon)>
        <WithStyles(ListItemText)
          inset={true}
          primary="logout-button"
        />
      </WithStyles(MenuItem)>
    </WithStyles(Menu)>
  </div>
</div>
`;

exports[`User profile component renders sign in button if not signed in 1`] = `
<div>
  <WithStyles(Button)
    className="UserProfileComponent-button-1"
    onClick={[Function]}
  >
    <WithStyles(Typography)
      color="inherit"
      noWrap={true}
      style={
        Object {
          "marginTop": 3,
        }
      }
    >
      login-button
    </WithStyles(Typography)>
  </WithStyles(Button)>
</div>
`;

exports[`User profile component renders user avatar if signed in with avatar url 1`] = `
<div>
  <div>
    <WithStyles(Avatar)
      alt="user"
      className="UserProfileComponent-avatar-4"
      onClick={[Function]}
      src="test_url"
    />
    <WithStyles(Menu)
      anchorEl={null}
      id="simple-menu"
      onClose={[Function]}
      open={false}
    >
      <div
        className="UserProfileComponent-usernameContainer-2"
      >
        <WithStyles(Typography)>
          Signed in as:
        </WithStyles(Typography)>
        <WithStyles(Typography)
          className="UserProfileComponent-username-3"
        >
          test
        </WithStyles(Typography)>
      </div>
      <WithStyles(Divider) />
      <WithStyles(MenuItem)
        onClick={[Function]}
      >
        <WithStyles(ListItemIcon)>
          <pure(ExitToAppIcon) />
        </WithStyles(ListItemIcon)>
        <WithStyles(ListItemText)
          inset={true}
          primary="logout-button"
        />
      </WithStyles(MenuItem)>
    </WithStyles(Menu)>
  </div>
</div>
`;
